update nav